* honor `GS_OPTIONS` environment variable for supplying additional parameters to command called by RGhost optimizer (#2337)
* add support for passing a color mode to the default optimizer (#2347)
* support horizontal alignment on AsciiDoc table cell that only contains paragraphs (#2358)

Improvements::

* process `pre-wrap` role in text formatter
* drop support for the unmaintained payment font (`pf`) for use in font-based icons
* refactor formatted text transform to simplify how inner space is collapsed; verify only inner hard breaks are preserved

Bug Fixes::

* resolve remote image in document title or section title with autogenerated ID
* keep caret between items in menu macro with previous item if items wrap
* don't include children of section with empty title in TOC
* don't include children of section with empty title in outline
* only load Treetop runtime so it does not overload `require` method
* fix collation order of index terms that differ only in case
* don't crash if page background image value is empty (interpret as "none")
* replace use of AbstractNode#role= method to ensure compatiblity with minimum supported version of Asciidoctor (Asciidoctor 2.0.10) (#2363)

== 2.3.3 (2022-10-21) - @mojavelinux

Bug Fixes::

* fix crash if last fragment in TOC entry is not rendered (#2354)
* pass `-dNEWPDF=false` to Ghostscript when optimizing PDF so it does not break internal links (#2355)

=== Details

{url-repo}/releases/tag/v2.3.3[git tag] | {url-repo}/compare/v2.3.2\...v2.3.3[full diff]

== 2.3.2 (2022-09-17) - @mojavelinux

Improvements::

* provide fallback value for `base-font-size` theme key before processing keys (#2342)

=== Details

{url-repo}/releases/tag/v2.3.2[git tag] | {url-repo}/compare/v2.3.1\...v2.3.2[full diff]

== 2.3.1 (2022-09-17) - @mojavelinux

Improvements::

* provide a fallback value for `base-font-size` when loading theme (#2343)

Bug Fixes::

* fix crash when smallcaps text transform is applied to a phrase (#2339)